--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.4"
   },
